[package]
name = "rusty-wifi"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
eframe = "0.34"
egui_plot = "0.35"
egui-modal = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
native-dialog = "0.9"
thiserror="2.0"
